                             #480330).
                           The files created with "SENDMAIL outfile" have
                             different names now to scale beyond 10k files
                             (closes: #587593).
                           Fixed the "is a mailfolder" checking for -f.
                           Various fixes for Mixmaster when not using ncurses.
                           Added new option --config to allow loading of
                             configuration information from an alternate file.
                           POOL is now used correctly if set in mix.cfg.
                           ASCII armor checksum is now verified on PGP keys.
                           Corrected a bug where 1/4096 of pgp messages was
                             destroyed due an improper armor checksum
                             interpretation.
                           Added password-based authenticated SMTP for mix.
                             Currently, only AUTH LOGIN is supported.
                           Mixmaster now handles <CR><LF> in pubring.mix.
                           Removed incorrect NT service checks in mix.c.
                           Mixmaster now keeps no stats in client mode.
                           The pool is autmatically checked for waiting
                             messages in the client configuration.
                           Mixmaster now bears a DFSG-compliant license.
                           Fixed permissions on tarball release.
                           Documentation updates.

2002-??-??      2.????     New option MAILIN that can be set to either a mbox
                             or Maildir folder. New mail will be read from it
                             and the folder cleared every time Mixmaster
                             processes its pool, or at MAILINTIME intervals
                             (closes: #597043).