@@ -1,5 +1,5 @@
 .TH MIX 1 "Mixmaster Version 3.0 beta"
-.\" $Id: mix.1,v 1.6.2.4 2002/10/09 21:45:16 weaselp Exp $
+.\" $Id: mix.1,v 1.6.2.5 2002/10/10 13:18:42 weaselp Exp $
 .SH NAME
 mix \- anonymous remailer software
 .SH SYNOPSIS
@@ -904,6 +904,9 @@ Public Diffie-Hellman parameters used for El-Gamal key generation (\fBDHPARAMS\f
 .TP
 .B dsaparam.mix
 Public DSA parameters used for DSA key generation (\fBDSAPARAMS\fP).
+.TP
+.B mix.pid
+Pid file in daemon mode (\fBPIDFILE\fP).
 .TP
 .BI pool/
 Message pool directory (\fBPOOL\fP).
