@@ -271,8 +271,12 @@
                            Fixed permissions on tarball release.
                            Documentation updates.
 
-2002-??-??      2.????     New option MAILIN that can be set to either a mbox
+2002-??-??      ???????    New option MAILIN that can be set to either a mbox
                              or Maildir folder. New mail will be read from it
                              and the folder cleared every time Mixmaster
                              processes its pool, or at MAILINTIME intervals
                              (closes: #597043).
+                           The Mixmaster daemon now writes a pid file.
+                           Mixmaster in daemon mode now catches SIGTERM and
+                             SIGINT and finishes its current queue run and then
+                             exits successfully.
